traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var x:Int=0;
  var count:Int=0;
  
  for(t<-1 to 1){
    colonne(y);
  }
  def colonne(y){
    var y:Int()=0;
    while(y!=getWorldHeight()){
      setPos(x,y);
      writeMessage(count);
      y+=1;
      count+=1;
    }
  }
}